# telegram-bell

./: .gitignore  README.md  config.py  notifier.py  pyproject.toml  sample.env  session_name.session  subscribed_channels.json  telegram_bell.service
scripts/: check_service.sh  install.sh  install_service.sh  restart_service.sh  show_service_logs.sh  start_service.sh  stop_service.sh
telegram_bell/: bell.py  config.py  exceptions.py  notifier.py
