[tool.poetry]
name = "telegram-bell"
version = "0.3.3"
description = "Notify you when something is mentioned in a telegram channel"
authors = ["Pablo Cabezas <headsrooms@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [
    { include = "telegram_bell" }
]

[tool.poetry.scripts]
tbell = 'telegram_bell.bell:cli'

[tool.poetry.dependencies]
python = "^3.10"
telethon = "^1.23"
12factor-configclasses = "^1.0.0"
rich = "^10.12.0"
asyncclick = "^8.0.1"
anyio = "^3.3.4"
python-dotenv = "^0.19.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
